# openconnect-saml

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: aur-publish.yml  integration-test.yml  publish.yml  release.yml  security.yml  test.yml
aur/: .SRCINFO  PKGBUILD  README.md
docs/: README.md  authentication.md  browsers.md  cli-reference.md  configuration.md  development.md  diagnostics.md  installation.md  migration.md  networking.md  operations.md  profiles.md
openconnect_saml/: __init__.py  app.py  authenticator.py  cli.py  completion.py  config.py  config_cmd.py  doctor.py  encrypted_backup.py  fido2_auth.py  gui.py  headless.py  history.py  interactive_tui.py  killswitch.py  notify.py  profile.py  profiles.py  saml_authenticator.py  service.py  sessions.py  setup_wizard.py  totp_providers.py  tui.py  version_check.py  xml_utils.py
openconnect_saml/browser/: __init__.py  browser.py  chrome.py  webengine_process.py
tests/: conftest.py  test_2fauth.py  test_app.py  test_bitwarden.py  test_browser.py  test_chrome_browser.py  test_cli_args.py  test_completion.py  test_config_cmd.py  test_config_edge_cases.py  test_coverage_additions.py  test_doctor.py  test_encrypted_backup.py  test_fido2.py  test_groups.py  test_headless.py  test_headless_whitelist.py  test_history.py  test_hostprofile.py  test_issue_fixes.py  test_killswitch.py  test_new_features.py  test_notify.py  test_onepassword.py  test_pass_provider.py  test_per_profile_settings.py  test_profile_export_import.py  test_profile_migrate.py  test_profile_parsing.py  test_profiles.py  test_profiles_set.py  test_reconnect.py  test_routes.py  test_security.py  test_service.py  test_sessions.py  test_setup_wizard.py  test_totp_resolver.py  test_tui.py  test_v060_features.py  (+2 more)
tests/integration/: mock_saml_gateway.py  test_cli_workflows.py  test_end_to_end.py  test_session_workflows.py
