[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openconnect-saml"
version = "0.1.0"
description = "OpenConnect wrapper with Azure AD (SAML) SSO support for Cisco SSL-VPNs"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Matthias Schabhüttl" },
]
keywords = ["openconnect", "vpn", "saml", "azure-ad", "sso", "cisco"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "attrs",
    "colorama",
    "keyring",
    "lxml",
    "prompt-toolkit",
    "pyotp",
    "pyqt6",
    "pyqt6-webengine",
    "pysocks",
    "pyxdg",
    "requests",
    "structlog",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "pytest-httpserver>=1.0",
    "ruff>=0.4",
]

[project.scripts]
openconnect-saml = "openconnect_saml.cli:main"

[project.urls]
Homepage = "https://github.com/mschabhuettl/openconnect-saml"
Repository = "https://github.com/mschabhuettl/openconnect-saml"
"Bug Tracker" = "https://github.com/mschabhuettl/openconnect-saml/issues"
Changelog = "https://github.com/mschabhuettl/openconnect-saml/releases"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openconnect_saml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
